<resources>
    <string name="app_name">Staff BPKPD Pasuruan</string>
    <string name="login_title">Login Akun</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="btn_login">Login</string>
    <string name="app_logo">logo aplikasi</string>
    <string name="email_cant_empty">Email tidak boleh kosong</string>
    <string name="email_format_error">Format email salah</string>
    <string name="password_cant_empty">Kata sandi tidak boleh kosong</string>
    <string name="try_again">Silahkan Coba Lagi</string>
    <string name="bottom_nav_home">Beranda</string>
    <string name="bottom_nav_scan_qr">Scan QR Code</string>
    <string name="bottom_nav_settings">Pengaturan</string>
    <string name="btn_back">tombol kembali</string>
    <string name="salinan">Salinan</string>
    <string name="icon_salinan">ikon tombol salinan</string>
    <string name="pbb">PBB</string>
    <string name="icon_pbb">ikon tombol PBB</string>
    <string name="icon_sk_njop">icon tombol sk njop</string>
    <string name="sk_njop">SK NJOP</string>
    <string name="icon_bphtb">icon tombol bphtb</string>
    <string name="bphtb">BPHTB</string>
    <string name="icon_penagihan">icon tombol penagihan</string>
    <string name="penagihan">Penagihan</string>
    <string name="icon_bphtb_kolektif">icon tombol bphtb kolektif</string>
    <string name="bphtb_kolektif">BPHTB Kolektif</string>
    <string name="icon_npwpd">icon tombol npwpd</string>
    <string name="npwpd">NPWPD</string>
    <string name="greetings">%1$s, \n%2$s</string>
    <string name="lihat_berkas">Lihat Berkas</string>
    <string name="logout">Logout</string>
    <string name="app_ver">App Version %1$s</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="change_photo">Ganti Foto</string>
    <string name="name">Nama</string>
    <string name="address">Alamat</string>
    <string name="phone">Nomor HP</string>
    <string name="btn_save">Update Profil</string>
    <string name="confirm_logout">Anda Yakin Ingin Logout?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="berkas_title">Berkas %1$s</string>
    <string name="nomor_berkas">Nomor Berkas: %1$s Th. %2$s</string>
    <string name="tgl_diterima">Diterima: %1$s</string>
    <string name="tgl_selesai">Selesai: %1$s</string>
    <string name="nama_pemohon">Nama: %1$s</string>
    <string name="alamat_pemohon">Alamat: %1$s, %2$s</string>
    <string name="kontak_pemohon">CP: %1$s</string>
    <string name="permohonan">Permohonan: %1$s</string>
    <string name="jml_permohonan">jumlah: %1$d</string>
    <string name="status_berkas">Status: %1$s</string>
    <string name="status_berkas_persen">%1$d%%</string>
    <string name="catatan">Catatan:</string>
    <string name="ditolak">Alasan Ditolak: %1$s</string>
    <string name="riwayat_berkas">Riwayat Berkas</string>
    <string name="icon_empty">icon data kosong</string>
    <string name="nama_staff">Nama Staff: %1$s</string>
    <string name="aksi_riwayat">Aksi: %1$s</string>
    <string name="nomor_sspd">SSPD: %1$s Th. %2$s</string>
    <string name="txt_informasi_transaksi">Informasi Transaksi</string>
    <string name="notaris">Notaris: %1$s</string>
    <string name="harga">Harga: Rp %1$s</string>
    <string name="nominal_bphtb">BPHTB: Rp %1$s</string>
    <string name="pembeli">Pembeli: %1$s</string>
    <string name="penjual">Penjual: %1$s</string>
    <string name="pengurangan">Pengurangan: %1$s</string>
    <string name="jenis_pengurangan">Jenis: %1$s</string>
    <string name="pengajuan">Pengajuan: %1$s</string>
    <string name="btn_terima_berkas">Terima Berkas</string>
    <string name="icon_terima_berkas">icon terima berkas</string>
    <string name="terima_berkas">Terima Berkas</string>
</resources>