<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_nomor_sspd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor_sspd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nomor_sspd">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/menu_box"
                android:backgroundTint="?attr/colorTertiaryContainer"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_tgl_diterima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl_diterima"
                    android:textColor="?attr/colorOnTertiaryContainer"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/menu_box"
                android:backgroundTint="?attr/colorTertiaryContainer"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_tgl_selesai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl_selesai"
                    android:textColor="?attr/colorOnTertiaryContainer"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="?attr/colorSecondaryContainer"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp">

                <TextView
                    android:id="@+id/tv_status_berkas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/status_berkas"
                    android:textColor="?attr/colorOnSecondaryContainer"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/status_berkas_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:max="100"
                    android:scaleY="2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_berkas" />

                <TextView
                    android:id="@+id/tv_status_berkas_persen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_box"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/status_berkas_persen"
                    android:textColor="?attr/colorSecondaryContainer"
                    app:layout_constraintBottom_toBottomOf="@+id/status_berkas_progress_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/status_berkas_progress_bar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_informasi_transaksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_informasi_transaksi"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/tv_notaris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/notaris"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_informasi_transaksi" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notaris">

            <TextView
                android:id="@+id/tv_nama_pembeli"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/pembeli"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_nama_penjual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/penjual"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/harga"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_bphtb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nominal_bphtb"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/tv_pengurangan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/pengurangan"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_jenis_pengurangan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jenis_pengurangan"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_kontak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:drawablePadding="4dp"
            android:text="@string/kontak_pemohon"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:drawableTint="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

        <TextView
            android:id="@+id/tv_jml_permohonan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/jml_permohonan"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_kontak" />

        <TextView
            android:id="@+id/txt_catatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/catatan"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_jml_permohonan" />

        <TextView
            android:id="@+id/tv_catatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_catatan" />

        <TextView
            android:id="@+id/tv_ditolak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/ditolak"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_catatan" />

        <TextView
            android:id="@+id/txt_berkas_riwayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/riwayat_berkas"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ditolak" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_berkas_riwayat">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_berkas_riwayat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="12dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_berkas_riwayat" />

            <ImageView
                android:id="@+id/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_empty"
                android:src="@drawable/ic_empty"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/rv_berkas_riwayat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_berkas_riwayat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>